--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,8 +23,11 @@ jobs:
         with:
           python-version: "3.10"
       - name: Install dependencies
-        working-directory: app
+        working-directory:
+          app
+          # python3-pyaudio
         run: |
+          sudo apt install -y portaudio19-dev 
           python -m pip install --upgrade pip
           pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
