--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: App
 
 on:
@@ -23,9 +20,7 @@ jobs:
         with:
           python-version: "3.10"
       - name: Install dependencies
-        working-directory:
-          app
-          # python3-pyaudio
+        working-directory: app
         run: |
           sudo apt install -y portaudio19-dev 
           python -m pip install --upgrade pip
