--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,4 +36,8 @@ jobs:
       - name: Test with pytest
         working-directory: app
         run: |
-          pytest
+          coverage run --source=app -m pytest
+      - name: Upload coverage data to coveralls.io
+        run: coveralls --service=github
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
