Add some more task tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
   "python.linting.enabled": true,
-  "python.linting.flake8Enabled": true
+  "python.linting.flake8Enabled": true,
+  "python.analysis.inlayHints.variableTypes": false,
+  "python.testing.pytestEnabled": true
 }
