Fix the type violations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "python.linting.enabled": true,
   "python.linting.flake8Enabled": true,
   "python.analysis.inlayHints.variableTypes": false,
-  "python.testing.pytestEnabled": true
+  "python.testing.pytestEnabled": true,
+  "python.analysis.typeCheckingMode": "strict"
 }
