--- a/website/package.json
+++ b/website/package.json
@@ -2,19 +2,33 @@
   "name": "telephone-website",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "server:dev": "nodemon server.js",
+    "web:dev": "parcel src/index.html",
+    "dev": "concurrently \"npm:server:dev\" \"npm:web:dev\""
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Matthew Tole <matthewtole@gmail.com>",
+  "license": "MIT",
   "dependencies": {
+    "@tanstack/react-location": "^3.7.4",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "luxon": "^3.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
+    "react-router-dom": "^6.3.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.11"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "@parcel/transformer-sass": "^2.7.0",
+    "@types/luxon": "^3.0.0",
+    "concurrently": "^7.3.0",
+    "nodemon": "^2.0.19",
+    "parcel": "^2.7.0",
+    "process": "^0.11.10"
   }
 }
