--- a/website/package.json
+++ b/website/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "luxon": "^3.0.1",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
