--- a/website/package.json
+++ b/website/package.json
@@ -22,7 +22,8 @@
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "sqlite": "^4.1.2",
-    "sqlite3": "^5.0.11"
+    "sqlite3": "^5.0.11",
+    "systeminformation": "^5.12.6"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.7.0",
