--- a/website/package.json
+++ b/website/package.json
@@ -12,13 +12,12 @@
   "author": "Matthew Tole <matthewtole@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@tanstack/react-location": "^3.7.4",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "luxon": "^3.0.1",
     "react": "^18.2.0",
-    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.8.4",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "sqlite": "^4.1.2",
