--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.env
+
 # Python files
 __pycache__/
 .pytest_cache/
@@ -18,3 +20,4 @@ telephone.log
 # Website files
 .parcel-cache/
 dist/
+coverage/
