--- a/website/package.json
+++ b/website/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "server:dev": "nodemon server.js",
+    "start": "node index.js",
+    "server:dev": "nodemon index.js",
     "web:dev": "parcel src/index.html",
-    "dev": "concurrently \"npm:server:dev\" \"npm:web:dev\""
+    "dev": "concurrently \"npm:server:dev\" \"npm:web:dev\"",
+    "test": "jest --collectCoverage"
   },
   "author": "Matthew Tole <matthewtole@gmail.com>",
   "license": "MIT",
@@ -26,13 +27,17 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.7.0",
+    "@types/jest": "^28.1.7",
     "@types/luxon": "^3.0.0",
     "@types/node": "^18.7.6",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "concurrently": "^7.3.0",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "parcel": "^2.7.0",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.8"
   }
 }
