--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -15,13 +15,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
+        working-directory: website
         uses: actions/setup-node@v3
         with:
           node-version: 14.x
           cache: "npm"
       - run: npm ci
-        working-directory: app
+        working-directory: website
       - run: npm run build --if-present
-        working-directory: app
+        working-directory: website
       - run: npm test
-        working-directory: app
+        working-directory: website
