--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -9,20 +9,20 @@ on:
   pull_request:
     branches: ["main"]
 
+defaults:
+  run:
+    working-directory: website
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
-        working-directory: website
         uses: actions/setup-node@v3
         with:
           node-version: 14.x
           cache: "npm"
       - run: npm ci
-        working-directory: website
       - run: npm run build --if-present
-        working-directory: website
       - run: npm test
-        working-directory: website
