Add DB seeding to the tests

--- a/website/package.json
+++ b/website/package.json
@@ -8,7 +8,8 @@
     "server:dev": "nodemon index.js",
     "web:dev": "parcel src/index.html",
     "dev": "concurrently \"npm:server:dev\" \"npm:web:dev\"",
-    "test": "jest --collectCoverage"
+    "test": "jest --collectCoverage",
+    "seed:db": "node seed-db.js"
   },
   "author": "Matthew Tole <matthewtole@gmail.com>",
   "license": "MIT",
