--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -26,4 +26,5 @@ jobs:
           cache-dependency-path: "website/package-lock.json"
       - run: npm ci
       - run: npm run build --if-present
+      - run: npm run seed-db
       - run: npm test
