--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,7 @@ jobs:
           github-token: ${{ secrets.github_token }}
           flag-name: website
           parallel: true
+          path-to-lcov: website/coverage/lcov.info
 
   app:
     runs-on: ubuntu-latest
@@ -65,12 +66,10 @@ jobs:
       - name: Test with pytest
         run: |
           coverage run --source=app -m pytest app
-      - name: Coveralls Parallel
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.github_token }}
-          flag-name: app
-          parallel: true
+      - name: Upload coverage data to coveralls.io
+        run: coveralls --service=github
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   coveralls:
     needs: [website, app]
