--- a/website/package.json
+++ b/website/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "generate-sound-waveform": "^0.1.11",
     "luxon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
