--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           sudo apt install -y portaudio19-dev 
           python -m pip install --upgrade pip
-          pip install flake8 pytest pyright
+          pip install flake8 pytest pyright coverage coveralls
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Static typing with pyright
         working-directory: app
