--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ jobs:
         working-directory: rust
     steps:
       - uses: actions-rs/toolchain@v1.0.6
+        with:
+          toolchain: stable
       - uses: actions-rs/cargo@v1.0.1
         with:
           command: check
