--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -8,6 +8,10 @@ default-run = "telephone"
 name = "telephone"
 src = "src/main.rs"
 
+[[bin]]
+name = "audio-player"
+src = "src/audio-player.rs"
+
 
 [dependencies]
 rodio = "0.16.0"
@@ -20,4 +24,4 @@ log = "0.4.17"
 simple_logger = "4.0.0"
 strum = "0.24.1"
 strum_macros = "0.24"
-
+tokio = { version = "1.28.1", features = ["full"] }
