--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
   "author": "Matthew Tole <matthewtole@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "generate-sound-waveform": "^0.1.11",
@@ -23,7 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.8.4",
-    "react-query": "^3.39.2",
+    "react-query": "^3.39.2", 
     "react-router-dom": "^6.3.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.11",
@@ -36,6 +37,7 @@
     "@types/node": "^18.7.6",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "buffer": "^6.0.3",
     "concurrently": "^7.3.0",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
