--- a/website/package.json
+++ b/website/package.json
@@ -21,14 +21,16 @@
     "express": "^4.18.1",
     "generate-sound-waveform": "^0.1.11",
     "luxon": "^3.0.1",
+    "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-h5-audio-player": "^3.8.4",
-    "react-query": "^3.39.2", 
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.0.11",
-    "systeminformation": "^5.12.6"
+    "systeminformation": "^5.12.6",
+    "winston": "^3.9.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.7.0",
