--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .env
+.DS_Store
 
 # Python files
 __pycache__/
@@ -18,7 +19,6 @@ temp/
 messages/
 *.log
 tmp.wav
-
 
 # Website files
 .parcel-cache/
